<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:background="@drawable/forimage"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_test"
        android:textColorHint="@color/black"
        android:background="@color/white"
        android:maxLength="10"
        android:padding="16dp"
        android:inputType="number"/>

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_test3"
            android:textColorHint="@color/black"
            android:background="@color/white"
            android:maxLength="50"
            android:padding="16dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_test2"
            android:textColorHint="@color/black"
            android:background="@color/white"
            android:padding="16dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textColorHint="@color/black"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_test1"
                android:paddingLeft="16dp"
                android:textSize="18sp"/>



            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20sp"/>
        </LinearLayout>


    </LinearLayout>





    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_test4"
            android:background="@color/white"
            android:textColorHint="@color/black"
            android:maxLength="50"
            android:padding="16dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="AddressLine 2"
            android:background="@color/white"
            android:textColorHint="@color/black"
            android:padding="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <EditText
            android:id="@+id/pincode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:background="@color/white"
            android:textColorHint="@color/black"
            android:maxLength="6"
            android:hint="@string/hint_test5"
            android:padding="16sp" />


        <Button
            android:id="@+id/BtnGetCityandState"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80sp"
            android:padding="16sp"
            android:text="CHECK" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/idTVPinCodeDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="10dp"
            android:textAllCaps="false"
            android:textColor="@color/purple_500"
            android:textSize="20sp" />


    </LinearLayout>
    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register" />


</TableLayout>